# archive-unzip

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev.db  OldDockerfile  README.md  api.py  app.ini  app.ini.sample  config.py  doc2html_uid.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  supervisor.conf  thumbnail_uid.py  uid-unzip.py  unzip_uid.py  wsgi.py
.github/workflows/: cicd.yml  cicd_preview_client.yml
api/: api.py  conversionFunctions.py  doc2html_uid.py  thumbnail_uid.py
app/: app.py  fetchfile.py  mdb.py  sendfile.py
app/countwords/: views.py
app/doc2html/: conversionFunctions.py  views.py  views_test.py
app/health/: views.py
app/km_audio/: km_audio.py  views.py
app/preview/: views.py
app/thumbnail/: paths.py  views.py
app/timecode/: views.py
app/unzip/: views.py
batch/: batch_thumb.py
misc/: fetch_and_load_mdb_dump.sh  imaginary.supervisor.conf  imaginary_start.sh  install_ffmpeg.sh  supervisor.conf
preview-client/: .env.sample  .eslintcache  Dockerfile  package.json
preview-client/misc/: docker-entrypoint.sh
preview-client/public/: index.html
preview-client/src/: App.js  Layout.js  consts.mjs  index.scss
test/: test_thumbnail.py
utils/: conversionFunctions.py  tidyOptions.json
